k3d/secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: leave-system
